# pagexml

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  LICENSE.md  PageXML.cc  PageXML.h  README.md  TextFeatExtractor.cc  TextFeatExtractor.h  githook-pre-commit  intimg.cc  intimg.h  mem.cc  mem.h
.circleci/: config.yml
.github/workflows/: ci_build_test.yml  ci_build_test_publish.yml
c++-libs/: Doxyfile
doc/: PageXML-API.md
docker/: Dockerfile_build  Dockerfile_build.sh  Dockerfile_runtime  Dockerfile_runtime.sh
docs/py-pagexml/: .buildinfo  api.html  genindex.html  index.html  objects.inv  pagexml.html  py-modindex.html  search.html  searchindex.js
docs/py-pagexml/_modules/: index.html  pagexml.html
docs/py-pagexml/_modules/pagexml/: pagexml.html  swigPageXML.html
docs/py-pagexml/_sources/: index.rst.txt  pagexml.rst.txt
docs/py-pagexml/_static/: documentation_options.js
docs/py-textfeat/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  textfeat.html
docs/py-textfeat/_modules/: index.html
docs/py-textfeat/_modules/textfeat/: swigTextFeatExtractor.html  textfeat.html
docs/py-textfeat/_sources/: api.rst.txt  index.rst.txt  textfeat.rst.txt
docs/py-textfeat/_static/: basic.css  css  doctools.js  documentation_options.js  fonts  jquery-3.2.1.js  jquery.js  js  language_data.js  pygments.css  searchtools.js  underscore-1.3.1.js  underscore.js  websupport.js
doxy2swig/: doxy2swig.py
examples/: lorem_tess.xml
lib/: CMakeLists.txt  Doxyfile  PageXML.cc  PageXML.h  TextFeatExtractor.cc  TextFeatExtractor.h  doc.sh  intimg.cc  intimg.h  mem.cc  mem.h  mock_cv.h
py-pagexml/: .gitignore  API.rst  Dockerfile_runtime  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
py-pagexml/docker/: Dockerfile_build  Dockerfile_build.sh  Dockerfile_build_manylinux.sh  Dockerfile_runtime  Dockerfile_runtime.sh  Dockerfile_test
py-pagexml/docs/: Makefile  conf.py  index.rst  pagexml.rst
py-pagexml/pagexml/: PageXML.cc  PageXML.h  PageXML.i  PageXML_doxy2swig.i  __init__.py  mock_cv.h  mock_cv.i  xsd
py-pagexml/pagexml_tests/: __main__.py  basic_tests.py  groups_tests.py  ordering_tests.py  run_tests.py  textequiv_tests.py
py-pagexml/sphinx/: api.rst  conf.py
py-pagexml/swig/: PageXML.i
py-pagexml/tests/: basic_tests.py
py-textfeat/: API.rst  README.md  requirements.txt  setup.cfg  setup.py
py-textfeat/docs/: Makefile  conf.py  index.rst
py-textfeat/sphinx/: api.rst  conf.py
py-textfeat/textfeat/: PageXML.h  TextFeatExtractor.cc  TextFeatExtractor.h  TextFeatExtractor.i  TextFeatExtractor_doxy2swig.i  __init__.py  intimg.cc  intimg.h  legacy.py  mem.cc  mem.h
xsd/: pagecontent_omnius.xsd  pagecontent_searchink.xsd
