[options]
packages = find:
test_suite = pagexml_tests
python_requires = >=3.5
install_requires =


[options.extras_require]
all =
    opencv-python>=3.2.0
test =
    coverage>=4.5.1
dev =
    pylint>=1.8.3
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10
    pkgconfig>=1.1.0


[metadata]
name = pagexml
description = Wrapper for the PageXML C++ library to ease handling of Page XML files within python.
long-description = file: README.rst
author = Mauricio Villegas
author-email = mauricio@omnius.com
url = https://github.com/omni-us/pagexml
license = MIT


[coverage:run]
include = pagexml/**


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build
