[options]
packages = find:
python_requires = >=3.5
install_requires =
    pagexml[all]>=2020.2.10


[options.extras_require]
all =

test =
    coverage>=4.5.1
dev =
    pylint>=1.8.3
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10
    pkgconfig>=1.1.0


[metadata]
name = textfeat
description = Wrapper for TextFeatExtractor C++ library for extracting features for text recognition.
long-description = file: README.rst
author = Mauricio Villegas
author-email = mauricio@omnius.com
url = https://github.com/omni-us/pagexml
license = MIT


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build
